# rix

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  default.nix  rust-toolchain.toml  shell.nix
core/: Cargo.toml  build.rs
core/src/: lib.rs  lock.rs  refs.rs  settings.rs
core/src/eval/: builtins.rs  derivation.rs  fetch.rs  mod.rs  print.rs
core/src/eval/value/: attrs.rs
core/src/fetch/: archive.rs  mod.rs
core/src/local_store/: mod.rs
core/src/store/: lock.rs  mod.rs  path_info.rs  refs.rs
core/src/store/derivation/: print.rs
core/src/store/local/: mod.rs
core/src/syntax/: expr.rs  mod.rs  parse.lalrpop  parse.rs
eval/: Cargo.toml
eval/src/: builtins.rs  derivation.rs  error.rs  expr.rs  fetch.rs  lex.rs  lib.rs  parse.lalrpop  parse.rs  print.rs  value.rs
eval/src/fetch/: cache.rs  mod.rs
fetch/: Cargo.toml
fetch/src/: cache.rs  lib.rs
rix/: Cargo.toml
rix/src/: lib.rs
settings-macro/: Cargo.toml
settings-macro/src/: lib.rs
settings-macro/tests/: basic.rs
src/: lib.rs  path.rs  prelude.rs
src/derivation/: mod.rs  parse.rs
src/eval/: builtins.rs  derivation.rs  mod.rs  print.rs  value.rs
src/eval/value/: mod.rs
src/fetch/: archive.rs  cache.rs  mod.rs
src/hash/: context.rs  mod.rs
src/store/: lock.rs  mod.rs  path.rs  path_info.rs  prelude.rs  refs.rs  settings.rs
src/store/derivation/: mod.rs  parse.rs  print.rs
src/store/local/: mod.rs
src/syntax/: expr.rs  mod.rs  parse.lalrpop
src/util/: base32.rs  cons_list.rs  error.rs  logger.rs  mod.rs  nar.rs  pipe.rs  pos.rs
src/util/hash/: mod.rs
store/: Cargo.toml
store/src/: base32.rs  lib.rs  lock.rs  noop_store.rs  path.rs  path_info.rs  prelude.rs  test.rs
store/src/derivation/: mod.rs  name.rs  parse.rs  print.rs
store/src/hash/: sink.rs
store/src/local/: mod.rs
syntax/: Cargo.toml  build.rs
syntax/src/: expr.rs  lex.rs  lib.rs  parse.lalrpop  parse.rs
util/: Cargo.toml  build.rs
util/src/: base32.rs  cons_list.rs  error.rs  lib.rs  logger.rs  nar.rs  pipe.rs  pos.rs  sqlite.rs
util/src/hash/: mod.rs  sink.rs
