[package]
name = "rix"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
binascii = "0.1.4"
bincode = "1.3.3"
cfg-if = "1.0.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
crossbeam = "0.8.1"
curl = "0.4.38"
derivative = "2.2.0"
derive_more = "0.99.14"
dirs = "3.0.2"
enum-as-inner = "0.3.3"
itertools = "0.10.1"
lalrpop-util = "0.19.6"
lazy_static = "1.4.0"
libarchive3-sys = "0.1.2"
libc = "0.2.97"
nix = "0.21.0"
once_cell = "1.8.0"
parking_lot = "0.11.1"
path_abs = "0.5.1"
regex = "1.5.4"
rm_rf = "0.6.1"
rusqlite = { version = "0.25.3", features = ["trace"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.126", features = ["rc", "derive"] }
serde_json = "1.0.64"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
smallvec = "1.6.1"
string_cache = "0.8.1"
tee_readwrite = "0.1.0"
tempfile = "3.2.0"
termcolor = "1.1.2"
thiserror = "1.0.25"
users = "0.11.0"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.0.0"

[build-dependencies]
lalrpop = "0.19.6"
