[package]
name = "rix"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.42"
base64 = "0.13.0"
binascii = "0.1.4"
bincode = "1.3.3"
cfg-if = "1.0.0"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
crossbeam = "0.8.1"
derive_more = "0.99.16"
dirs = "4.0.0"
enum-as-inner = "0.3.3"
itertools = "0.10.1"
lalrpop-util = "0.19.6"
lazy_static = "1.4.0"
libc = "0.2.98"
nix = "0.23.1"
once_cell = "1.8.0"
parking_lot = "0.11.1"
path_abs = "0.5.1"
regex = "1.5.4"
rusqlite = { version = "0.26.3", features = ["trace"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.127", features = ["rc", "derive"] }
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
smallvec = "1.6.1"
string_cache = "0.8.1"
termcolor = "1.1.2"
thiserror = "1.0.26"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.0.0"

[build-dependencies]
lalrpop = "0.19.6"
