[package]
name = "rix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
cfg-if = "1.0.0"
crossbeam = "0.8.1"
curl = "0.4.41"
derivative = "2.2.0"
derive_more = "0.99.17"
dirs = "4.0.0"
enum-as-inner = "0.3.3"
lazy_static = "1.4.0"
libarchive3-sys = "0.1.2"
libc = "0.2.112"
maplit = "1.0.2"
nix = "0.23.1"
num_cpus = "1.13.1"
once_cell = "1.9.0"
parking_lot = "0.11.2"
regex = "1.5.4"
rix-syntax = { path = "../syntax" }
rix-util = { path = "../util" }
rm_rf = "0.6.1"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
slog = "2.7.0"
slog-scope = "4.4.0"
smallvec = "1.7.0"
tee_readwrite = "0.1.0"
tempfile = "3.2.0"
termcolor = "1.1.2"
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
ipc-channel = "0.15.0"
rlimit = "0.6.2"
linux-personality = "1.0.0"
dns-lookup = "1.0.8"
seccomp-sys = "0.1.3"
netdevice = "0.1.1"
