[package]
name = "rix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
cfg-if = "1.0.0"
crossbeam = "0.8.1"
derivative = "2.2.0"
libc = "0.2.112"
maplit = "1.0.2"
nix = "0.23.1"
num_cpus = "1.13.1"
once_cell = "1.9.0"
parking_lot = "0.11.2"
rix-syntax = { path = "../syntax" }
rix-util = { path = "../util" }
rix-eval = { path = "../eval" }
rix-store = { path = "../store" }
rm_rf = "0.6.1"
tee_readwrite = "0.1.0"
tempfile = "3.2.0"
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
ipc-channel = "0.15.0"
rlimit = "0.6.2"
linux-personality = "1.0.0"
dns-lookup = "1.0.8"
seccomp-sys = "0.1.3"
netdevice = "0.1.1"
