[package]
name = "rix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
async-recursion = "1.0.0"
async-trait = "0.1.52"
cfg-if = "1.0.0"
crossbeam = "0.8.1"
derivative = "2.2.0"
libc = "0.2.112"
maplit = "1.0.2"
nix = "0.23.1"
num_cpus = "1.13.1"
once_cell = "1.9.0"
parking_lot = "0.11.2"
rix-eval = { path = "../eval" }
rix-store = { path = "../store" }
rix-syntax = { path = "../syntax" }
rix-util = { path = "../util" }
rm_rf = "0.6.1"
sqlx = { version = "0.5.10", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
tee_readwrite = "0.1.0"
tempfile = "3.2.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"] }
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
ipc-channel = "0.15.0"
rlimit = "0.6.2"
linux-personality = "1.0.0"
dns-lookup = "1.0.8"
seccomp-sys = "0.1.3"
netdevice = "0.1.1"
