[package]
name = "rix-eval"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
codespan-reporting = "0.11.0"
crossbeam = "0.8.0"
derivative = "2.2.0"
enum-as-inner = "0.3.3"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
regex = "1.4.3"
rix-fetch = { path = "../fetch" }
rix-store = { path = "../store" }
rix-syntax = { path = "../syntax" }
rix-util = { path = "../util" }
serde = "1.0.123"
serde_json = "1.0.62"
slog-scope = "4.4.0"
smallvec = "1.6.1"
termcolor = "1.1.2"
thiserror = "1.0.24"
