[package]
name = "rix-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
crossbeam = "0.8.1"
curl = "0.4.42"
dirs = "4.0.0"
libarchive3-sys = "0.1.2"
nix = "0.23.1"
once_cell = "1.9.0"
parking_lot = "0.11.2"
regex = "1.5.4"
rix-store = { path = "../store" }
rix-syntax = { path = "../syntax" }
rix-util = { path = "../util" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
slog = "2.7.0"
slog-scope = "4.4.0"
smallvec = "1.8.0"
tempfile = "3.3.0"
termcolor = "1.1.2"

[dev-dependencies]
rix-core = { path = "../core" }
