[package]
name = "rix-fetch"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.36"
curl = "0.4.34"
dirs = "3.0.1"
libarchive3-sys = "0.1.2"
nix = "0.19.1"
once_cell = "1.5.2"
parking_lot = "0.11.1"
rix-store = { path = "../store" }
rix-util = { path = "../util" }
rusqlite = "0.24.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
slog = "2.7.0"
slog-scope = "4.3.0"
tempfile = "3.1.0"
