[package]
name = "rix-fetch"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
curl = "0.4.34"
dirs = "3.0.1"
libarchive3-sys = "0.1.2"
nix = "0.20.0"
once_cell = "1.6.0"
parking_lot = "0.11.1"
rix-store = { path = "../store" }
rix-util = { path = "../util" }
rusqlite = "0.24.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
slog = "2.7.0"
slog-scope = "4.4.0"
tempfile = "3.2.0"
