[package]
name = "rix-store"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
binascii = "0.1.4"
crossbeam = "0.8.0"
derivative = "2.1.1"
derive_more = "0.99.11"
dirs = "3.0.1"
enum-as-inner = "0.3.3"
lazy_static = "1.4.0"
nix = "0.19.1"
parking_lot = "0.11.1"
rix-util = { path = "../util" }
rm_rf = "0.6.0"
rusqlite = "0.24.2"
rust-crypto = "0.2.36"
slog-scope = "4.3.0"
tee_readwrite = "0.1.0"
tempfile = "3.1.0"
thiserror = "1.0.22"
