[package]
name = "rix-store"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
binascii = "0.1.4"
cfg-if = "1.0.0"
crossbeam = "0.8.1"
derivative = "2.2.0"
derive_more = "0.99.14"
dirs = "3.0.2"
enum-as-inner = "0.3.3"
getset = "0.1.1"
ipc-channel = "0.15.0"
lazy_static = "1.4.0"
nix = "0.21.0"
once_cell = "1.8.0"
parking_lot = "0.11.1"
rix-util = { path = "../util" }
rm_rf = "0.6.1"
rusqlite = "0.25.3"
rust-crypto = "0.2.36"
slog-scope = "4.4.0"
tee_readwrite = "0.1.0"
tempfile = "3.2.0"
thiserror = "1.0.25"
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.97"
