[package]
name = "rix-syntax"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
bincode = "1.3.3"
codespan = "0.11.1"
derive_more = "0.99.14"
dirs = "3.0.2"
enum-as-inner = "0.3.3"
itertools = "0.10.1"
lalrpop-util = "0.19.6"
lazy_static = "1.4.0"
parking_lot = "0.11.1"
path_abs = "0.5.1"
regex = "1.5.4"
rix-util = { path = "../util" }
serde = { version = "1.0.126", features = ["rc", "derive"] }
slog-scope = "4.4.0"
string_cache = "0.8.1"
thiserror = "1.0.25"

[build-dependencies]
lalrpop = "0.19.6"
