[package]
name = "rix-util"
version = "0.1.0"
authors = ["Jude Taylor <me@jude.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
base64 = "0.13.0"
binascii = "0.1.4"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
crossbeam = "0.8.1"
derive_more = "0.99.14"
lazy_static = "1.4.0"
nix = "0.21.0"
once_cell = "1.8.0"
parking_lot = "0.11.1"
rusqlite = { version = "0.25.3", features = ["trace"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.126", features = ["derive"] }
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
string_cache = "0.8.1"
thiserror = "1.0.25"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.0.0"
