[package]
name = "rix-util"
version = "0.1.0"
edition = "2021"
authors = ["Jude Taylor <me@jude.xyz>"]

[dependencies]
anyhow = "1.0.52"
base64 = "0.13.0"
binascii = "0.1.4"
codespan = "0.11.1"
codespan-reporting = "0.11.1"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
derive_more = "0.99.17"
enum-as-inner = "0.3.3"
lazy_static = "1.4.0"
nix = "0.23.1"
once_cell = "1.9.0"
parking_lot = "0.11.2"
rusqlite = { version = "0.26.3", features = ["trace"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.132", features = ["derive", "rc"] }
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-envlogger = "2.2.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
string_cache = "0.8.2"
thiserror = "1.0.30"

[dev-dependencies]
hex = "0.4.3"
proptest = "1.0.0"

[build-dependencies]
string_cache_codegen = "0.5.1"
